[package]
name = "chrono_lc"
version = "0.1.4"
edition = "2021"
authors = ["Alessandro Pellizzari <alex@amiran.it>", "Erica Marigold <hi@devcomp.xyz>"]
description = "Localised date and time formatting library for Rust, based on chrono"
homepage = "https://github.com/0x5eal/chrono-locale"
readme = "README.md"
keywords = ["date", "time", "calendar"]
categories = ["date-and-time"]
license = "MIT/Apache-2.0"
repository = "https://github.com/0x5eal/chrono-locale"
build = "build.rs"

[dependencies]
chrono = "0.4"
num-integer = { version = "0.1", default-features = false }
lazy_static = "1.2"

[build-dependencies]
serde = "1.0.188"
serde_json = "1"
serde_derive = "1.0.188"
walkdir = "2.4.0"
